@@ -606,7 +606,7 @@ struct prop_info {
 	{ "full_name",  "cn",               PROP_TYPE_NORMAL,  NULL },
 	{ "title",      "title",            PROP_TYPE_NORMAL,  NULL },
 	{ "email",      "mail",             PROP_TYPE_LIST,    construct_email_list },
-	{ "phone",      "telephoneNumber",  PROP_TYPE_LIST,    construct_phone_list }
+	{ "phone",      "telephoneNumber",  PROP_TYPE_LIST,    construct_phone_list },
 };
 
 static int num_prop_infos = sizeof(prop_info_table) / sizeof(prop_info_table[0]);
