@@ -1,3 +1,8 @@
+2000-04-14  Christopher James Lahey  <clahey@helixcode.com>
+
+	* e-shell-view.c: Made the left pane of the shell view not
+	autoresize.
+
 2000-04-09  Matt Loper  <matt@helixcode.com>
 
 	* e-shell-view.c (e_shell_view_setup): Set the default height
